1. HF Fund profile  2. Textarea autogrow for m2s2, fund profile  3. News type category - NBRK

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -106,11 +106,11 @@
                             Hedge Funds <span class="bootstrapCaret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a [routerLink]="['/hf/dashboard']" >Dashboard</a></li>
+                            <!--<li><a [routerLink]="['/hf/dashboard']" >Dashboard</a></li>-->
                             <li><a [routerLink]="['/hf/fundSearch']">Fund Search</a></li>
-                            <li><a [routerLink]="['/hf/fundSelection']">Fund Selection </a></li>
-                            <li><a [routerLink]="['/hf/portfolio']">Portfolio </a></li>
-                            <li><a [routerLink]="['/hf/report']">Report </a></li>
+                            <!--<li><a [routerLink]="['/hf/fundSelection']">Fund Selection </a></li>-->
+                            <!--<li><a [routerLink]="['/hf/portfolio']">Portfolio </a></li>-->
+                            <!--<li><a [routerLink]="['/hf/report']">Report </a></li>-->
                             <li role="separator" class="divider"></li>
                             <!--<li><a [routerLink]="['/hf/fundProfile/0']">New Fund </a></li>-->
                             <li><a [routerLink]="['/hf/managerProfile/0']">New Manager </a></li>
