--- a/nicnbk-ui-angular2/src/app/hf/view/hf.portfolio.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.portfolio.component.html
@@ -1,6 +1,56 @@
 <div class="container">
-    HF Portfolio
+    Portfolio
     <div style="min-height: 150px;">
+        <!--<div class="row">-->
+            <!--<h3>SINGULAR</h3>-->
+        <!--</div>-->
+        <!--<div class="row">-->
+            <!--<div class="col-md-2">-->
+                <!-- - % <br/>NOV-->
+            <!--</div>-->
+            <!--<div class="col-md-2">-->
+                <!-- - %<br/>QTD-->
+            <!--</div>-->
+            <!--<div class="col-md-2">-->
+                <!-- - %<br/>YTD-->
+            <!--</div>-->
+            <!--<div class="col-md-2">-->
+                <!--&#45;&#45; %<br/>Trailing 12-->
+            <!--</div>-->
+            <!--<div class="col-md-2">-->
+                <!-- -<br/>Net Asset Value-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<br/>-->
+        <!--<br/>-->
+        <!--<ul class="nav nav-tabs">-->
+            <!--<li class="active">-->
+                <!--<a data-toggle="tab" href="#performance">PERFORMANCE</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a data-toggle="tab" href="#allocation">ALLOCATION</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a data-toggle="tab" href="#stats">STATS</a>-->
+            <!--</li>-->
+            <!--<li>-->
+            <!--<a data-toggle="tab" href="#returns">RETURNS</a>-->
+            <!--</li>-->
+        <!--</ul>-->
 
+        <!--<div class="tab-content">-->
+            <!--<div id="overview" class="tab-pane fade in active">-->
+
+            <!--</div>-->
+            <!--<div id="allocation" class="tab-pane fade">-->
+
+            <!--</div>-->
+            <!--<div id="stats" class="tab-pane fade">-->
+
+            <!--</div>-->
+            <!--<div id="returns" class="tab-pane fade">-->
+
+            <!--</div>-->
+        <!--</div>-->
     </div>
 </div>
