--- a/nicnbk-ui-angular2/src/app/m2s2/view/re-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/re-memo-edit.component.html
@@ -104,7 +104,7 @@
                         </select>
                     </div>
                     <div class="col-md-6">
-                            <textarea autosize spellcheck="false" class="form-control"
+                            <textarea spellcheck="false" class="form-control"
                                       [disabled]="memo.arrangedBy != 'OTHER'" id="arrengedByDescription" maxlength="250"
                                       [(ngModel)]="memo.arrangedByDescription"></textarea>
                     </div>
@@ -112,7 +112,7 @@
                 <div class="row top-buffer">
                     <label class="control-label col-md-3">Purpose:</label>
                     <div class="col-md-9">
-                        <textarea autosize spellcheck="false"  type="text" class="form-control" id="purpose" maxlength="1000"
+                        <textarea spellcheck="false"  type="text" class="form-control" id="purpose" maxlength="1000"
                                   [(ngModel)]="memo.purpose"></textarea>
                     </div>
                 </div>
@@ -141,14 +141,14 @@
                 <div class="row top-buffer">
                     <div class="col-md-3">&nbsp;</div>
                     <div class="col-md-9">
-                        <textarea autosize spellcheck="false"  type="text" placeholder="Other NIC attendees..." class="form-control"
+                        <textarea spellcheck="false"  type="text" placeholder="Other NIC attendees..." class="form-control"
                                   maxlength="1000" id="attendeesNIC" [(ngModel)]="memo.attendeesNICOther"></textarea>
                     </div>
                 </div>
                 <div class="row top-buffer">
                     <label class="control-label col-md-3" for="attendeesDescription">Attendees (Other Party):</label>
                     <div class="col-md-9">
-                        <textarea autosize spellcheck="false"  type="text" class="form-control" id="attendeesDescription" maxlength="1000"
+                        <textarea spellcheck="false"  type="text" class="form-control" id="attendeesDescription" maxlength="1000"
                                   [(ngModel)]="memo.attendeesOther"></textarea>
                     </div>
                 </div>
@@ -294,7 +294,7 @@
                 <div class="col-md-1">&nbsp;</div>
                 <label for="nonsuitableReason" class="col-md-1">If No, why</label>
                 <div class="col-md-5">
-                    <textarea autosize autosize spellcheck="false"  class="form-control col-md-4" id="nonsuitableReason" maxlength="1000"
+                    <textarea autosize spellcheck="false"  class="form-control col-md-4" id="nonsuitableReason" maxlength="1000"
                         [disabled]="memo.suitable" [(ngModel)]="memo.nonsuitableReason"></textarea>
                 </div>
             </div>
@@ -323,7 +323,7 @@
     </div>
     <div class="row top-buffer withpadding">
         <div class="col-md-12 nopadding">
-            <textarea autosize spellcheck="false"  class="form-control" [(ngModel)]="memo.teamNotes"></textarea>
+            <textarea spellcheck="false"  class="form-control" [(ngModel)]="memo.teamNotes"></textarea>
         </div>
     </div>
     <div class="row top-buffer withpadding">
@@ -346,7 +346,7 @@
     </div>
     <div class="row top-buffer withpadding">
         <div class="col-md-12 nopadding">
-            <textarea autosize spellcheck="false"  class="form-control" [(ngModel)]="memo.trackRecordNotes"></textarea>
+            <textarea spellcheck="false"  class="form-control" [(ngModel)]="memo.trackRecordNotes"></textarea>
         </div>
     </div>
     <div class="row top-buffer withpadding">
@@ -369,7 +369,7 @@
     </div>
     <div class="row top-buffer withpadding">
         <div class="col-md-12 nopadding">
-            <textarea autosize spellcheck="false"  class="form-control" [(ngModel)]="memo.strategyNotes"></textarea>
+            <textarea spellcheck="false"  class="form-control" [(ngModel)]="memo.strategyNotes"></textarea>
         </div>
     </div>
     <div class="row top-buffer withpadding">
@@ -382,7 +382,7 @@
     </div>
     <div class="row top-buffer withpadding">
         <div class="col-md-12 nopadding">
-            <textarea autosize spellcheck="false"  class="form-control" [(ngModel)]="memo.otherNotes"></textarea>
+            <textarea spellcheck="false"  class="form-control" [(ngModel)]="memo.otherNotes"></textarea>
         </div>
     </div>
     <div class="row top-buffer withpadding">
@@ -403,10 +403,10 @@
     </div>
     <div class="row top-buffer withpadding">
         <div class="col-md-6 nopadding">
-            <textarea autosize spellcheck="false"  class="form-control" [(ngModel)]="memo.nicFollowups"></textarea>
+            <textarea spellcheck="false"  class="form-control" [(ngModel)]="memo.nicFollowups"></textarea>
         </div>
         <div class="col-md-6 nopadding">
-            <textarea autosize spellcheck="false"  class="form-control" [(ngModel)]="memo.otherPartyFollowups"></textarea>
+            <textarea spellcheck="false"  class="form-control" [(ngModel)]="memo.otherPartyFollowups"></textarea>
         </div>
     </div>
     <br/>
